examples/test/testpolicy10304.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10304
  namespace: namespace222
spec:
  podSelector:
    matchLabels:
      key47: value38
      key3: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value22
          key30: value47
      podSelector:
        matchLabels:
          key2: value35
          key6: value23
          key46: value40
